Changed font colors, changed headings in about and skills sections, fixed an issue with cards not being responsive, fixed an issue for content bleeding on very small devices, fixed grammer mistakes, add some extra skill bars, adjusted padding in main content to take up less of the screen, adjusted colour of section deviders

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,14 @@ html{
 
 /* ------------------------------Colours/Fonts/Sizing/Alignment */
 body{
-    background-color: #252627;
+    background-color:#252627;
 }
 
 .bg-dark{
     background-color: #181818 !important;
 }
  nav li a{
-     color: #707070 !important;
+     color: #fafafa !important;
      text-transform: uppercase;
      font-family: "Monsterrat", sans-serif;
      font-size: 14px;
@@ -21,7 +21,7 @@ body{
  }
 
  .navbar-brand{
-     color: #707070 !important;
+     color: #fafafa !important;
      font-weight: 100;
      font-size: 36px;
      font-family: "Montserrat", sans-serif;
@@ -38,7 +38,7 @@ body{
     position: relative;
     text-align: center;
     justify-content: center;
-    padding-top: 120px;
+    padding-top: 30px;
  }
 
  .heading-text{
@@ -48,13 +48,13 @@ body{
      letter-spacing: 2px;
  }
 
- .underwriting{
+ /* .underwriting{
      font-size: 18px;
-     color: #707070;
+     color: #fafafa;
      word-spacing: 10px;
      justify-content: center;
      text-align: center;
- }
+ } */
 
 
  hr{
@@ -62,11 +62,12 @@ body{
      width: 120px;
      margin-left: auto;
      margin-right: auto;
-     background-color: #181818;
+     background-color: #fafafa/* #181818 */;
+     opacity: 0.7;
  }
 
  .contact-button{
-     margin-top: 30px;
+     margin-top: 10px;
      height: 45px;
      width: 150px;
      text-transform: uppercase;
@@ -113,10 +114,10 @@ body{
  .about-heading,
  .my-work-heading,
  .contact-heading{
-     color: #707070;
+     color: #fafafa;
      text-shadow: 20px 20px 1.2rem rgba(0, 0, 0, 0.8);
-     font-size: 100px;
-     opacity: .3;
+     font-size: 5em;
+     opacity: .8;
      z-index: 0;
      padding-left: 20px;
      font-family: "PT sans";
@@ -141,24 +142,26 @@ body{
      justify-content: center; */
      text-align: center;
      z-index: 1;
-     color: #707070;
+     color: #fafafa;
      font-family: "Montserrat", sans-serif;
      font-size: 15px;
 
  }
 
 .progress-bar{
-    background-color: #00b3ff;
+    background-color: #00b3ff !important;
 }
 
 .info-header{
     display: block;
     margin: 10px 0;
     font-weight: 600;
+    font-size: 17px;
+    text-decoration: underline;
 }
 
 /* .skills-heading{
-    color: #707070;
+    color: #fafafa;
      font-size: 100px;
      opacity: .3;
      z-index: 0;
@@ -260,17 +263,12 @@ body{
 }
 
 .navbar ul li a:hover{
-    border-bottom: 1px solid #707070;
+    border-bottom: 1px solid #00b3ff;
 }
 
 
 /* ------------------------------Media Query */
 
-/* @media screen and (max-with:768px){
-    .my-work-container{
-        text-align: center;
-    }
-} */
   @media only screen and (max-width: 600px) {
   .skills-heading,
  .about-heading,
@@ -287,7 +285,19 @@ body{
   .main-content{
       padding-top: 10px;
   }
+
+  .contact-form{
+      text-align: center;
+  }
 }
+
+/* @media (min-width: 576px){
+    .card-deck .card{
+        flex 0 0 0%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+} */
 
 /* ------------------------------Skills */
 
@@ -299,6 +309,7 @@ body{
     position: relative;
     height: 25px;
     margin-bottom: 10px;
+    background-color: #181818;
 }
 
 .subject{
@@ -309,7 +320,7 @@ body{
     letter-spacing: 0.5px;
     padding: 4px 30px 4px 20px;
     color: #fafafa;
-    background-color: rgba(25, 25, 25, 0.2);
+    /* background-color: #00b3ff/* rgba(25, 25, 25, 0.2) ;*/
 }
 
 
@@ -327,14 +338,16 @@ body{
 
 .card-body{
     background-color: #181818;
-    color: #707070;
+    color: #fafafa;
     font-family: "Montserrat", sans-serif;
 }
 
 .card{
     border: none !important;
+    width: 270px;
+    height: 295px;
+    overflow: scroll;
 }
-
 
 
 /* ------------------------------Footer */
@@ -348,11 +361,11 @@ body{
 }
 
 .social-links li i{
-    color: #707070;
+    color: #fafafa;
 }
 
 footer h5{
-    color: #707070;
+    color: #fafafa;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     text-transform: uppercase;
@@ -367,16 +380,16 @@ footer h5{
 
 .modal-header,
 .modal-body{
-    color: #707070;
+    color: #fafafa;
 }
 
 .submit-button{
-    background-color: #707070;
+    background-color: #fafafa;
     color: #181818;
 }
 
 .close{
-    color: #707070;
+    color: #fafafa;
     opacity: 1;
 }
 
@@ -388,7 +401,7 @@ footer h5{
     padding: 100px;
     margin-top: 50px;
     background-color: #181818;
-    color: #707070;
+    color: #fafafa;
     box-shadow: 0 0 1.2rem rgba(0, 0, 0, 0.6);
     max-width: 800px;
     margin-left: auto;
